# WiFiSmartConfig

./: .cproject  .project
main/: CMakeLists.txt  main.c  main.cpp  main.h
main/board/: Flash.cpp  Flash.h
main/service/: WIFI.cpp  WIFI.h
